--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Roboto:wght@400;700&display=swap");
+
+/*reset*/
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+input {
+  outline: none;
+  border: none;
+}
+
+button {
+  border: none;
+}
+
+/*general*/
+body {
+  margin: 0;
+  font-family: "Roboto", "DM Serif Display", sans-serif;
+}
+
+.container {
+  max-width: 1300px;
+  margin: 0 auto;
+}
+
+.btn {
+  padding: 10px 50px;
+  background-color: #21408e;
+  border-radius: 30px;
+  color: #fff;
+  font-size: 22px;
 }
